tests/baselines/reference/ES5For-ofTypeCheck12(target=es2015).errors.txt
ES5For-ofTypeCheck12.ts(1,17): error TS2488: Type '0' must have a '[Symbol.iterator]()' method that returns an iterator.


==== ES5For-ofTypeCheck12.ts (1 errors) ====
    for (const v of 0) { }
                    ~
!!! error TS2488: Type '0' must have a '[Symbol.iterator]()' method that returns an iterator.